--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="checkmark.svg" />
+        <link rel="icon" type="image/svg+xml" href="favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Are you a Robot?</title>
+        <title>Vite App</title>
         <link rel="stylesheet" href="style.css" />
         <script type="module" src="/main.js"></script>
     </head>
