--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" type="image/svg+xml" href="checkmark.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Are you a Robot?</title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="/style.css" />
         <script type="module" src="/main.js"></script>
     </head>
     <body>
