--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,6 @@
             <div id="incorrectMessage">Please select all matching images</div>
             <button id="verify">VERIFY</button>
         </main>
+        <footer>Created by Adam Hutton</footer>
     </body>
 </html>
